css/main.css
.content {
	max-width: 1000px
}
.logo-img {
	height: 100px;
	width: 100px;
	margin-top: 30px;
	margin-left: 15%;
}
.name {
	margin-top: 50px;
	margin-bottom: 0px;
	margin-right: 10%;
}
.tag-line {
	margin-top: 5px;
	margin-right: 10%;
}
hr {
	display: block;
	color: #7d97ad;
	background-color: #7d97ad;
	width: 90%;
	max-width: 1000px;
	height: 5px;
}
.code-img {
   display: block;
   margin: auto;
   max-width: 1000px;
   width: 90%;
}
.latest-projects {
	margin-left: 10%;
	font-weight: bold;
	text-align: left;
}
@media screen and (max-width: 1564px) {
	hr {
		width: 90%;
	}
}
@media screen and (max-width: 767px) {
	.logo-img {
		display: none !important;
	}
	.name {
		margin-right: 6.8%;
		margin-top: 50px;
	}
	.tag-line {
		margin-right: 6.8%;
	}
	.latest-projects {
		margin-left: 0px;
		text-align: center;
	}
}

